Fix submit button issue on mobile checkout

--- a/style.scss
+++ b/style.scss
@@ -3035,6 +3035,10 @@ vertical-align: bottom;
 		position: absolute;
 		right:25px;
 		top:0;
+
+		@include breakpoint(small) {
+			padding:0;
+		}
 	}
 	.eshopcheckoutconf {
 		width:100%;
